Ajout de séecurity dans le swagger
